tdf#166520 make OverlayManagerBuffered more aware of MapModes

need to also use MapModeLastCompleteRedraw for the invalidates
which are at OverlayManagerBuffered::invalidateRange. Calc is
just completely unstable using MapModes at any Window. The one
remembered at full repaint has to be the DrawingLayer one, so
overlay works in DrawingLayer coordinates/MapMode(s)

Change-Id: I6be133078ab27903592cdf75bd3d1d2bb77f189a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185563
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>